Fix issue where navbar on small displays would appear behind phone

--- a/public/stylesheets/format.css
+++ b/public/stylesheets/format.css
@@ -33,6 +33,7 @@
     width: 300px;
     height: auto;
     background-color: #EEF0F4;
+    z-index: 1;
   }
 
   .menu-button {
